Adicionei um parrágrafo
2o parara

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veritatis optio porro adipisci possimus et facere dicta sapiente nulla quisquam eius id, architecto est quidem ut dolorem iusto molestias eligendi!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas illo ut quasi repellendus neque laborum incidunt magnam atque laudantium, numquam rerum cumque alias harum officia voluptatem cum, consequuntur, molestias voluptates.</p>
 </body>
 </html>
